# sdepm

./: .env  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: Makefile  pyproject.toml
backend/alembic/versions/: 002_audit_log.py  003_address_inspire.py
backend/app/: config.py  main.py
backend/app/api/common/routers/: ca_activities.py  ca_areas.py  str_activities.py  str_activities_bulk.py
backend/app/api/v0/: main.py
backend/app/crud/: activity.py  area.py
backend/app/db/: config.py
backend/app/exceptions/: handlers.py
backend/app/models/: __init__.py  activity.py  address.py  audit_log.py
backend/app/schemas/: activity.py  activity_bulk.py  area.py  common.py  error.py
backend/app/security/: __init__.py  audit.py  audit_retention.py
backend/app/services/: activity.py  activity_bulk.py
backend/tests/api/: test_ca_activities.py  test_ca_areas.py  test_jwt_functional_id_validation.py  test_str_activities.py  test_str_activities_bulk.py
backend/tests/crud/: test_activity.py
backend/tests/fixtures/: factories.py
backend/tests/security/: test_audit.py  test_audit_retention.py
backend/tests/services/: test_activity.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_FUNC.md  ARCHITECTURE_TECH.md  DATAMODEL.md  DESIGN.md  INTEGRATION_TESTS.md  LISTING_ACTIVITY.md  MIGRATION_ADDRESS_INSPIRE.md  PERFORMANCE_TESTS.md  PRE.md  SECURITY.md  WOW.md
docs/diagrams/: ACTIVITY.excalidraw  ACTIVITYFLOW.excalidraw  DATAMODEL.excalidraw  LISTING.excalidraw  LISTINGFLOW.excalidraw
keycloak/: add-realm-admin.sh  add-realm-machine-clients.sh  add-realm-roles.sh  add-realm.sh  get-client-secret.sh  machine-clients.yaml  realm.yaml
postgres/: clean-testrun.sql
scripts/: run-tests-perf.sh  run-tests.sh
test-data/: 02-area-generated.sql  generate-area-sql.sh
tests/: test_auth_unauthorized.sh  test_ca_areas.sh  test_str_activities.sh  test_str_activities_bulk.sh
tests/lib/: create_fixture_areas.sh
tests/perf/: locustfile.py
v1prototype/: README.md
